Initial CLI implementation
Bug: 
Change-Id: I256c478115a80db88919226cabd46d9cdf1544f8

--- a/org.eclipse.jgit.pgm/resources/org/eclipse/jgit/pgm/internal/CLIText.properties
+++ b/org.eclipse.jgit.pgm/resources/org/eclipse/jgit/pgm/internal/CLIText.properties
@@ -376,6 +376,7 @@ usage_parseRepoManifest=Parse a repo manifest file and add submodules
 usage_path=path
 usage_pathToXml=path to the repo manifest XML file
 usage_performFsckStyleChecksOnReceive=perform fsck style checks on receive
+usage_pickaxe=includes commits that introduce or remove instances of the pattern in the diff.
 usage_portNumberToListenOn=port number to listen on
 usage_printOnlyBranchesThatContainTheCommit=print only branches that contain the commit
 usage_pruneStaleTrackingRefs=prune stale tracking refs
